--- a/pm-proj004/index.html
+++ b/pm-proj004/index.html
@@ -19,6 +19,12 @@
       <li><a href="../pm-proj002/">Projeto 002</a></li>
       <li><a href="../pm-proj003/">Projeto 003</a></li>
       <li><a href="../pm-proj004/">Projeto 004</a></li>
+      <li><a href="../pm-proj005/">Projeto 005</a></li>
+      <li><a href="../pm-proj006/">Projeto 006</a></li>
+      <li><a href="../pm-proj007/">Projeto 007</a></li>
+      <li><a href="../pm-proj008/">Projeto 008</a></li>
+      <li><a href="../pm-proj009/">Projeto 009</a></li>
+      <li><a href="../pm-proj010/">Projeto 010</a></li>
   </ul>
    
 </body>
