--- a/pm-proj008/index.html
+++ b/pm-proj008/index.html
@@ -26,7 +26,7 @@
 <body>
     <aside>
         <h1><span>Nucliot</span></h1>
-    <!-- menu de navegação coloca dentra da tag nav-->
+    <!-- menu de navegação coloca dentro da tag nav-->
  <nav>
      <ul>
          
